# opencrg-python

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat  opencrg.rst
opencrg-c-api/: CMakeLists.txt
opencrg-c-api/src/: crgLoader.c
src/: opencrg.cc  opencrg.h  py_opencrg.cpp
tests/: test.py
